java-web-app/flux/deployment-yytest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-web-app
  namespace: java-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-web-app
  template:
    metadata:
      labels:
        app: java-web-app
    spec:
      containers:
      - name: java-web-app
        image: harbor.lab.local/final/java-web-app-3:1.0.25 # {"$imagepolicy": "flux-system:cicd123"}
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
