java-web-app/flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-web-app
  namespace: java-web-app
spec:
  selector:
    app: java-web-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
