java-web-app/flux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd123
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: java-web-app.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd123
                port:
                  number: 80
